# skillhub

./: .gitignore  Cargo.toml  IMPROVEMENTS_REPORT.md  LOGIN_GUIDE.md  LOGIN_VISUAL_GUIDE.md  README.md  VISUAL_IMPROVEMENTS.md
.claude/: CLAUDE.md
src/: client.rs  config.rs  error.rs  main.rs
src/application/: command.rs  dto.rs  query.rs  service.rs  service.rs.bak
src/cmd/: install.rs  login.rs  publish.rs  search.rs
src/domain/: error.rs
src/domain/entity/: label.rs  mod.rs  namespace.rs  notification.rs  promotion.rs  report.rs  review.rs  skill.rs  token.rs  user.rs
src/domain/repository/: auth_repository.rs  label_repository.rs  mod.rs  namespace_repository.rs  notification_repository.rs  promotion_repository.rs  report_repository.rs  review_repository.rs  skill_repository.rs  token_repository.rs  user_repository.rs
src/domain/value_object/: mod.rs  sort_order.rs  visibility.rs
src/infrastructure/: config.rs  local_store.rs  mod.rs
src/infrastructure/client/: mod.rs
src/infrastructure/repository/: auth_repository_impl.rs  mod.rs  skill_repository_impl.rs
src/tui/: app.rs  event.rs  handler.rs  mod.rs  runner.rs  theme.rs
src/tui/component/: mod.rs
src/tui/page/: mod.rs  render.rs
src/tui/widget/: mod.rs
