[package]
name = "skillhub"
version = "0.1.0"
edition = "2024"
description = "CLI for SkillHub - AI Agent Skill Registry"
license = "MIT"
repository = "https://github.com/mrlijing/agentos"
publish = ["crates-io"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
thiserror = "2"
colored = "3"
dialoguer = "0.11"
uuid = { version = "1", features = ["serde"] }
urlencoding = "2"
bytes = "1"
